<resources>
    <string name="app_name">MyUnspleshPlatform</string>
    <string name="unsplesh_platform">Unsplesh Platform</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG-IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="registar">Registar</string>
    <string name="signout">Signout</string>
    <string name="create_act">Create Account</string>
    <string name="post_title">Post Title...</string>
    <string name="post_description">Post Description</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last Name</string>
    <string name="id" />
    <string name="id_number">id</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
