<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MainFragment">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_bg3" />

    <TextView
        android:id="@+id/flickrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="@font/akronim"
        android:text="@string/unsplesh_platform"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="@string/register"
        android:text="@string/register"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flickrTextView" />

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>